--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "duotone-denim-syntax",
   "theme": "syntax",
   "version": "0.4.1",
-  "description": "A denim DuoTone syntax theme",
+  "description": "A denim Duotone syntax theme",
   "keywords": [
     "dark",
     "denim",
